tests/lean/assumption_tac_notation.lean
example (A : Type) (a : A) : A := ‹A›
example (A : Type) (a : A) := ‹A›
example (A : Type) : A := ‹A›
example (A : Type) := ‹A›
